# cerberus

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.example.yml  version.env
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 4e48786a50fc_encrypt_keys.py  7734c7cf9f64_schema_optimizations.py  ccd02348c5de_initial_migration.py
backend/scripts/: generate_keys.py  generate_redis_acl.py
backend/src/: __init__.py  celery_app.py
backend/src/admin/: README.md  schemas.py
backend/src/admin/api/: routes.py
backend/src/authentication/: README.md  container.py
backend/src/authentication/adapters/: email_sender.py
backend/src/authentication/api/: dependencies.py  schemas.py  usecase_dependencies.py
backend/src/authentication/core/: utils.py
backend/src/authentication/infrastructure/: tasks.py
backend/src/authorization/: README.md  container.py
backend/src/authorization/adapters/: custom_authorization.py
backend/src/authorization/api/: dependencies.py
backend/src/projects/: README.md  schemas.py
backend/src/projects/api/: routes.py
backend/src/projects/infrastructure/: tasks.py
backend/src/shared/: README.md  container.py
backend/src/shared/adapters/: email_client.py  encryption.py  (+1 more)
backend/src/users/: README.md  container.py
backend/tests/: conftest.py  test_lint.py
backend/tests/api/: test_routes.py
backend/tests/core/: test_jwt_rsa.py  test_multi_tenant.py
backend/tests/e2e/: test_live_routes.py
(+162 files in other folders)
