[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic==1.18.4",
    "argon2-cffi==25.1.0",
    "asyncpg==0.31.0",
    "authlib==1.7.2",
    "celery-batches>=0.11",
    "celery[redis]>=5.3.1",
    "cryptography>=41.0.0",
    "email-validator==2.3.0",
    "fastapi==0.136.3",
    "gunicorn==21.2.0",
    "httpx==0.28.1",
    "httpx2>=2.4.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "mypy==2.1.0",
    "passlib[argon2]==1.7.4",
    "pydantic-settings==2.14.1",
    "pyjwt[crypto]==2.13.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "python-multipart==0.0.32",
    "redis==8.0.0",
    "resend==2.30.1",
    "ruff==0.15.16",
    "slowapi==0.1.9",
    "sqlalchemy==2.0.50",
    "uuid6==2025.0.1",
    "uvicorn[standard]==0.49.0",
]

[dependency-groups]
dev = [
    "types-authlib>=1.6.11.20260518",
    "python-dotenv>=1.0.1",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = [
    "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning:slowapi.extension",
    "ignore:.*Accessing argon2.__version__ is deprecated.*:DeprecationWarning:passlib.handlers.argon2",
]
